# rust-backend

./: Cargo.toml  README.md  configuration.yaml
.github/workflows/: general.yaml
scripts/: clean_db.sh  init_db.sh  install_dependency.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
