[package]
name = "rust-backend"
version = "0.1.0"
edition = "2018"
[lib]
path = "src/lib.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "=4.0.0-rc.3"
tokio = { version = "1.17", features = ["macros", "rt-multi-thread"] }
[dev-dependencies]
reqwest = "0.11"
